update fetch_assigned_incidents funciton

--- a/example.ipynb
+++ b/example.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,6 @@
       "Disconnected from the database.\n",
       "\n",
       "        **Report filed for incident INC0010003**\n",
-      "        \n",
       "        - **Event Timestamp:** 2024-01-16 12:30:00\n",
       "        - **Event Detail:** Baseband replacement\n",
       "        - **Site ID:** 14883_Lala_Land_Hilltop\n",
@@ -153,6 +152,26 @@
    ],
    "source": [
     "res = file_report(incident_id=\"INC0010003\")\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to the database.\n",
+      "Disconnected from the database.\n",
+      "Successfully closed the ticket for incident INC0010003. Details: Baseband replacement\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = close_ticket(incident_id=\"INC0010003\")\n",
     "print(res)"
    ]
   }
